# python-project-52

./: .coverage  .gitignore  Makefile  README.md  build.sh  coverage.xml  pyproject.toml  sonar-project.properties
.github/workflows/: sonarcloud.yml
labels/: tests.py  urls.py  views.py
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: models.py  tests.py  urls.py  views.py
task_manager/: settings.py  urls.py
task_manager/labels/: apps.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels.py  0003_alter_task_name.py
task_manager/templates/: index.html
task_manager/templates/labels/: delete.html  index.html  update.html
task_manager/templates/statuses/: delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  index.html  update.html
task_manager/users/: forms.py  tests.py  urls.py  views.py
task_manager/users/fixtures/: users.json
tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/fixtures/: tasks.json
templates/: base.html  login.html
templates/labels/: create.html
templates/statuses/: create.html
templates/tasks/: create.html  delete.html  index.html  show.html
templates/users/: create.html  delete.html  index.html  update.html
users/: forms.py  tests.py  urls.py  views.py
(+2 files in other folders)
